# ApexCtl

./: .gitignore  ApexCtl.cabal  README  apexctl-profile  apexctl-reset  apexctl-resethub  keys.txt  log.txt  makefile  profile  readme.md  scancodes.txt
config/: 90-apex.hwdb  90-apexctl.rules  Xmodmap
src/: Main.hs
