name:           ApexCtl 
version:        0.0.2
cabal-version:  -any
build-type:     Simple
license:        AllRightsReserved
build-depends:  base -any, 
                binary -any,
                bytestring -any,
                cmdargs -any,
                vector -any, 
                usb == 1.2.0.1
description:    .
author:         Audrius Šaikūnas
executable:     apexctl
main-is:        Main.hs
buildable:      True
hs-source-dirs: src
ghc-options:    -threaded
